--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TestFiles"]
 	path = TestFiles
-	url = git@github.com:CyrilWaechter/IfcRelSpaceBoundary_TestFiles.git
+	url = https://github.com/CyrilWaechter/IfcRelSpaceBoundary_TestFiles.git
